Style internal links differently on hover

--- a/resources/style/org.css
+++ b/resources/style/org.css
@@ -76,6 +76,9 @@ a:hover {
   text-decoration: underline;
   filter: brightness(80%); }
 
+a[href^="https://orgmode.org"]:hover, a:not([href^="https://"]):hover {
+  text-decoration: underline dashed; }
+
 #content {
   font-size: 1.2em;
   line-height: 2em;
