--- a/resources/style/org.scss
+++ b/resources/style/org.scss
@@ -371,6 +371,9 @@ dd {
     p {
         display: inline;
         margin-left: 1rem;
+        a:hover {
+            text-decoration: none;
+        }
     }
 }
 
