Fix body background on chrome

--- a/resources/style/org.css
+++ b/resources/style/org.css
@@ -439,7 +439,8 @@ div.side-fig {
 
 body {
   margin: calc(2.0rem + 14px) var(--body-right) 0 var(--body-left);
-  padding: 0 var(--body-padding); }
+  padding: 0 var(--body-padding);
+  background-color: #f6f5f4; }
 
 nav#main {
   background-color: var(--green);
