--- a/resources/style/org.scss
+++ b/resources/style/org.scss
@@ -472,6 +472,7 @@ div.side-fig {
 body {
     margin: calc(2.0rem + 14px) var(--body-right) 0 var(--body-left);
     padding: 0 var(--body-padding);
+    background-color: #f6f5f4;
 }
 
 nav#main {
