--- a/resources/style/org-demo.css
+++ b/resources/style/org-demo.css
@@ -1,15 +1,15 @@
 #org-demo {
-  background: #eee;
+  background: #eeeeee;
   padding: 0.5rem 1rem; }
   #org-demo asside.left, #org-demo asside.right {
-    background-color: #7a94;
+    background-color: #e0eae7;
     line-height: 1.4;
     border-radius: 3px;
     padding: 0 1rem 0.3em 1rem; }
     #org-demo asside.left h4, #org-demo asside.right h4 {
       margin: 0 -1rem 0.1em -1rem;
       padding: 0.2em 1rem;
-      background-color: #7a95; }
+      background-color: #c6dad3; }
     @media (max-width: 1000px) {
       #org-demo asside.left, #org-demo asside.right {
         display: block;
@@ -30,7 +30,7 @@
   #org-demo asside.label-left {
     float: left;
     transform: translateX(-100%);
-    color: #aa8b77;
+    color: #896c5a;
     margin-right: -100%;
     font-family: var(--sans);
     padding-right: 2rem; }
@@ -67,39 +67,37 @@
   #org-demo pre.br {
     margin-top: 1em; }
   #org-demo .org-document-title, #org-demo .org-document-info {
-    color: var(--dark-green); }
+    color: #527469; }
   #org-demo .org-level-1 {
-    color: var(--green); }
+    color: #4e7367; }
   #org-demo .org-level-2 {
-    color: #ab8867; }
+    color: #806656; }
   #org-demo .org-level-1, #org-demo .org-level-2 {
     cursor: pointer; }
   #org-demo .org-done, #org-demo .org-special-keyword, #org-demo .org-block-begin-line, #org-demo .org-block-end-line {
     color: #62686e; }
   #org-demo .org-date {
-    color: #ab8867; }
+    color: #806656; }
     #org-demo .org-date:hover {
-      color: #eee;
-      background-color: #ab8867; }
+      color: #eeeeee;
+      background-color: #aa8b77; }
   #org-demo .org-todo-active, #org-demo .org-table {
-    color: #9289ab; }
+    color: #715ab1; }
   #org-demo .org-todo, #org-demo .org-checkbox, #org-demo .org-checkbox-statistics-todo {
-    color: #6fab75; }
+    color: #29785f; }
   #org-demo .org-link {
-    color: #80a2ab;
+    color: #3c6f9f;
     text-decoration: underline; }
     #org-demo .org-link:hover {
-      color: #eee;
-      background-color: #80a2ab;
+      color: #eeeeee;
+      background-color: #3c6f9f;
       cursor: pointer; }
     #org-demo .org-link a {
       color: inherit; }
   #org-demo .org-list-dt {
-    color: #80a2ab; }
+    color: #3c6f9f; }
   #org-demo .org-document-title, #org-demo .org-level-1, #org-demo .org-level-2 {
     font-weight: bold; }
-  #org-demo .org-code {
-    color: #ab8867; }
   #org-demo > details, #org-demo details.br {
     margin-top: 1em; }
   #org-demo details:not([open]) pre .org-level-1::after, #org-demo details:not([open]) pre .org-level-2::after {
