--- a/resources/style/org.css
+++ b/resources/style/org.css
@@ -24,54 +24,41 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD; }
 
 html {
+  font-family: "Droid Serif", Cambria, Big Carslon, Lucida Bright, Georgia, "DejaVu Serif", serif;
+  font-weight: 400; }
+
+:root {
+  --sans: -apple-system, BlinkMacSystemFont, San Francisco, Helvetica Neue, Helvetica, Ubuntu, Roboto, Noto, Segoe UI, Arial, sans-serif; }
+
+* {
+  box-sizing: border-box; }
+
+:root {
+  --body-left: 0px;
+  --body-right: 0px;
+  --body-padding: 10px; }
+  @media (min-width: 850px) and (max-width: 1000px) {
+    :root {
+      --body-left: 25px;
+      --body-right: 15px; } }
+  @media (min-width: 1000px) {
+    :root {
+      --body-left: 50px;
+      --body-right: 30px;
+      --body-padding: 20px; } }
+  @media (min-width: 1600px) {
+    :root {
+      --body-left: 80px;
+      --body-right: 50px;
+      --body-padding: 30px; } }
+html {
   margin: 0;
-  font: 400 .9em/1.6em "Droid Serif", "Open Sans", Cambria, Georgia, "DejaVu Serif", serif;
   overflow-x: hidden; }
 
-#searchgmane {
-  margin-left: 10pt; }
-
-#logo {
-  position: absolute;
-  top: 12px;
-  left: 20px; }
-
-#buttons {
-  display: block;
-  font-size: 1.2em;
-  position: absolute;
-  top: 20pt;
-  right: 10pt;
-  text-align: right;
-  padding: .2em 1em;
-  background: #EEE;
-  border-radius: 10px; }
-
-button.btn, a.btn {
-  display: inline-block;
-  padding: 8px 15px;
-  border-radius: 3px;
-  margin: 5px 0px;
-  color: #fff;
-  background-color: var(--green); }
-  button.btn:hover, a.btn:hover {
-    text-decoration: none;
-    color: #fff;
-    background-color: var(--dark-green); }
-
-a {
-  text-decoration: none;
-  color: var(--dark-green); }
-
-a:visited {
-  text-decoration: none; }
-
-a:not(.btn):hover {
-  text-decoration: underline;
-  filter: brightness(85%); }
-
-a[href^="https://orgmode.org"]:not(.btn):hover, a:not(.btn):not([href^="https://"]):not([href^="http://"]):hover {
-  text-decoration: underline dashed; }
+body {
+  margin: calc(2.0rem + 14px) var(--body-right) 0 var(--body-left);
+  padding: 0 var(--body-padding);
+  background-color: #fafafa; }
 
 #content {
   font-size: 1.2em;
@@ -90,8 +77,8 @@ h3 {
   font-size: 1.4em; }
 
 .outline-3 {
-  background-color: #eaeaea;
-  border-left: 4px solid var(--dark-green);
+  background-color: #ebebeb;
+  border-left: 4px solid #587e72;
   padding: 5pt;
   width: 27em;
   max-width: 80%;
@@ -119,119 +106,11 @@ h2 {
   margin-left: 50px;
   max-width: 80%; }
 
-.iframe {
-  float: right; }
-
 *.outline-2 p {
   margin-right: 5px;
   margin-left: 5px;
   padding-right: 5px;
   padding-left: 5px; }
-
-code, kbd {
-  font-family: "Droid Sans Mono";
-  hyphens: none;
-  word-break: break-word;
-  white-space: normal;
-  word-wrap: break-word; }
-
-code {
-  color: #333;
-  background-color: #e8e8e8;
-  border-radius: 4px;
-  padding: 2px 4px;
-  font-size: 85%; }
-
-kbd {
-  background-color: #f7f7f7;
-  border: 1px solid #ccc;
-  border-radius: 3px;
-  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2), 0 0 0 2px #fff inset;
-  color: #333;
-  line-height: 1.4;
-  margin: 0 .1em;
-  padding: .1em .6em;
-  text-shadow: 0 1px 0 #fff;
-  font-size: 75%; }
-
-pre {
-  font-family: "Droid Sans Mono", monospace;
-  font-size: .8em;
-  font-weight: normal;
-  line-height: 1.4em;
-  background-color: #eeeeee;
-  border-left: 4px solid #aaa;
-  margin-right: 1pt;
-  padding: 0.4em 0.6em; }
-
-pre.src {
-  padding: 0.4em 0.6em;
-  overflow-x: auto;
-  position: relative; }
-  pre.src::before {
-    display: none;
-    position: absolute;
-    right: 10px;
-    padding: 3px;
-    background-color: #eeec;
-    color: #555;
-    top: 0; }
-  pre.src:hover::before {
-    display: inline; }
-
-pre.src-org:before {
-  content: 'Org mode'; }
-
-pre.src-shell:before {
-  content: 'Shell'; }
-
-example, .src {
-  color: #2c3e50; }
-
-.example .org-keyword, .src .org-keyword {
-  color: #3a81c3; }
-
-.example .org-variable-name, .src .org-variable-name {
-  color: #715ab1; }
-
-.example .org-rainbow-delimiters-depth-1,
-.example .org-rainbow-delimiters-depth-2,
-.example .org-rainbow-delimiters-depth-3,
-.example .org-rainbow-delimiters-depth-4,
-.example .org-rainbow-delimiters-depth-5,
-.example .org-rainbow-delimiters-depth-6,
-.example .org-rainbow-delimiters-depth-7,
-.example .org-rainbow-delimiters-depth-8,
-.example .org-rainbow-delimiters-depth-9,
-.src .org-rainbow-delimiters-depth-1,
-.src .org-rainbow-delimiters-depth-2,
-.src .org-rainbow-delimiters-depth-3,
-.src .org-rainbow-delimiters-depth-4,
-.src .org-rainbow-delimiters-depth-5,
-.src .org-rainbow-delimiters-depth-6,
-.src .org-rainbow-delimiters-depth-7,
-.src .org-rainbow-delimiters-depth-8,
-.src .org-rainbow-delimiters-depth-9 {
-  color: #555555; }
-
-.example .org-string, .src .org-string {
-  color: #2d9574; }
-
-.example .org-comment,
-.example .org-comment-delimiter,
-.src .org-comment,
-.src .org-comment-delimiter {
-  color: #555555; }
-
-.example .org-function-name,
-.src .org-function-name {
-  color: #6c3163; }
-
-.example .org-constant,
-.example .org-highlight-numbers-number,
-.src .org-constant,
-.src .org-highlight-numbers-number {
-  color: #4e3163; }
 
 .org-right {
   margin-left: auto;
@@ -309,136 +188,22 @@ dd {
   text-align: right;
   vertical-align: middle; }
 
-#orgquote {
-  z-index: 1000;
-  position: fixed;
-  margin: 0;
-  bottom: 0;
-  right: 0;
-  font-size: 100%;
-  padding: 20px;
-  background-color: #eee;
-  -moz-opacity: 0;
-  opacity: 0;
-  filter: alpha(opacity=0); }
+img.inline {
+  height: 1em;
+  margin-bottom: -0.15em; }
 
-#orgquote:hover {
-  -moz-opacity: 1;
-  opacity: 1;
-  filter: alpha(opacity=100); }
+#a-quote {
+  font-style: italic;
+  opacity: 0.7; }
 
-.move {
-  font-weight: 800;
-  color: var(--dark-green);
-  position: relative; }
-  .move a {
-    color: inherit;
-    text-transform: capitalize; }
-    .move a:hover {
-      opacity: 0.9;
-      text-decoration: none; }
-
-.outline-text-2 > .move {
-  top: -30px; }
-
-#postamble {
-  text-align: center;
-  background: #eaeaea;
-  color: #515151;
-  font-family: var(--sans);
-  font-family: var(--sans);
-  padding: 0.4rem 0;
-  margin: 5rem calc(0px - var(--body-right) - var(--body-padding)) 0 calc(0px - var(--body-left) - var(--body-padding)); }
-  #postamble p {
-    display: inline;
-    margin-left: 1rem; }
-    #postamble p a:hover {
-      text-decoration: none; }
-
-div.side-fig {
-  max-width: 1600px;
-  margin: auto;
-  display: flex;
-  flex-wrap: wrap-reverse;
-  flex-direction: row-reverse;
-  justify-content: space-evenly;
-  position: relative;
-  padding-top: 5rem; }
-  div.side-fig h2 {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    left: 0;
-    text-align: center; }
-    @media (min-width: 850px) {
-      div.side-fig h2 {
-        width: 95%; } }
-    div.side-fig h2:target {
-      top: calc(-10px - 3rem); }
-  div.side-fig > div.outline-text-2 > figure {
-    width: min(600px, 100vw);
-    margin: 26px 0 10px 0; }
-    @media (min-width: 850px) {
-      div.side-fig > div.outline-text-2 > figure {
-        width: min(700px, 50vw); } }
-    div.side-fig > div.outline-text-2 > figure img, div.side-fig > div.outline-text-2 > figure object {
-      width: 100%;
-      margin-left: 0;
-      max-height: 500px;
-      object-fit: contain;
-      object-position: left center; }
-  div.side-fig > div.outline-text-2 .move {
-    position: absolute;
-    top: 5rem;
-    left: 0;
-    width: 100%;
-    text-align: center; }
-    @media (max-width: 1800px) {
-      div.side-fig > div.outline-text-2 .move {
-        display: none; } }
-  div.side-fig > div.outline-3 {
-    border: none;
-    background-color: transparent;
-    width: 600px;
-    max-width: 100%; }
-    div.side-fig > div.outline-3 > div.outline-4 {
-      background-color: #eaeaea;
-      border-left: 4px solid var(--dark-green);
-      padding: 5px; }
-      div.side-fig > div.outline-3 > div.outline-4 h4 {
-        display: none; }
-
-:root {
-  --sans: -apple-system, BlinkMacSystemFont, San Francisco, Helvetica Neue, Helvetica, Ubuntu, Roboto, Noto, Segoe UI, Arial, sans-serif;
-  --body-left: 0px;
-  --body-right: 0px;
-  --body-padding: 10px;
-  --green: #77aa99;
-  --dark-green: #587e72; }
-  @media (min-width: 850px) and (max-width: 1000px) {
-    :root {
-      --body-left: 25px;
-      --body-right: 15px; } }
-  @media (min-width: 1000px) {
-    :root {
-      --body-left: 50px;
-      --body-right: 30px;
-      --body-padding: 20px; } }
-  @media (min-width: 1600px) {
-    :root {
-      --body-left: 80px;
-      --body-right: 50px;
-      --body-padding: 30px; } }
-* {
-  box-sizing: border-box; }
-
-body {
-  margin: calc(2.0rem + 14px) var(--body-right) 0 var(--body-left);
-  padding: 0 var(--body-padding);
-  background-color: #fafafa; }
+.inline {
+  display: inline-block; }
 
 nav#main {
-  background-color: var(--green);
+  background-color: #689486;
+  background-image: url(/resources/img/greenteselatedband.png);
+  background-size: auto calc(2.5rem + 16px);
+  background-repeat: repeat-x;
   padding: 8px;
   margin-bottom: 20px;
   display: flex;
@@ -461,7 +226,7 @@ nav#main {
       display: inline-block;
       font-weight: 700;
       margin: 0;
-      color: #333; }
+      color: #323232; }
       nav#main a p.logo img {
         height: 2em;
         margin-bottom: -0.8em;
@@ -470,10 +235,10 @@ nav#main {
   nav#main #translate {
     position: absolute;
     left: 1em;
-    color: #5a8073;
+    color: #eeeeee;
     font-weight: bold; }
     nav#main #translate a {
-      color: #5a8073;
+      color: #d5d5d5;
       font-weight: bold;
       padding: 0px;
       margin: 0 -2px 0 -2px; }
@@ -524,6 +289,193 @@ nav#main {
         display: block; }
       nav#main input:checked ~ #translate a {
         display: inline-block; } }
+h2[id]:target {
+  padding-top: calc(40px + 2rem); }
+
+button.btn, a.btn {
+  display: inline-block;
+  padding: 8px 15px;
+  border-radius: 3px;
+  margin: 5px 0px;
+  color: #fafafa;
+  background-color: #77aa99; }
+  button.btn:hover, a.btn:hover {
+    text-decoration: none;
+    color: #fafafa;
+    background-color: #587e72; }
+
+a {
+  text-decoration: none;
+  color: #587e72; }
+
+a:visited {
+  text-decoration: none; }
+
+a:not(.btn):hover {
+  text-decoration: underline;
+  filter: brightness(85%); }
+
+a[href^="https://orgmode.org"]:not(.btn):hover, a:not(.btn):not([href^="https://"]):not([href^="http://"]):hover {
+  text-decoration: underline dashed; }
+
+code, kbd {
+  font-family: "Droid Sans Mono";
+  hyphens: none;
+  word-break: break-word;
+  white-space: normal;
+  word-wrap: break-word; }
+
+code {
+  color: #323232;
+  background-color: #e6e6e6;
+  border-radius: 4px;
+  padding: 2px 4px;
+  font-size: 85%; }
+
+kbd {
+  background-color: whitesmoke;
+  border: 1px solid #323232;
+  border-radius: 3px;
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2), 0 0 0 2px #fff inset;
+  color: #323232;
+  line-height: 1.4;
+  margin: 0 .1em;
+  padding: .1em .6em;
+  text-shadow: 0 1px 0 #fff;
+  font-size: 75%; }
+
+pre {
+  font-family: "Droid Sans Mono", monospace;
+  font-size: .8em;
+  font-weight: normal;
+  line-height: 1.4em;
+  background-color: #eeeeee;
+  border-left: 4px solid #aaaaaa;
+  margin-right: 1pt;
+  padding: 0.4em 0.6em; }
+
+pre.src {
+  padding: 0.4em 0.6em;
+  overflow-x: auto;
+  position: relative; }
+  pre.src::before {
+    display: none;
+    position: absolute;
+    right: 10px;
+    padding: 3px;
+    background-color: rgba(238, 238, 238, 0.8);
+    color: #555555;
+    top: 0; }
+  pre.src:hover::before {
+    display: inline; }
+
+pre.src-org:before {
+  content: 'Org mode'; }
+
+pre.src-shell:before {
+  content: 'Shell'; }
+
+example, .src {
+  color: #2c3e50; }
+
+.example .org-keyword, .src .org-keyword {
+  color: #3a81c3; }
+
+.example .org-variable-name, .src .org-variable-name {
+  color: #715ab1; }
+
+.example .org-rainbow-delimiters-depth-1,
+.example .org-rainbow-delimiters-depth-2,
+.example .org-rainbow-delimiters-depth-3,
+.example .org-rainbow-delimiters-depth-4,
+.example .org-rainbow-delimiters-depth-5,
+.example .org-rainbow-delimiters-depth-6,
+.example .org-rainbow-delimiters-depth-7,
+.example .org-rainbow-delimiters-depth-8,
+.example .org-rainbow-delimiters-depth-9,
+.src .org-rainbow-delimiters-depth-1,
+.src .org-rainbow-delimiters-depth-2,
+.src .org-rainbow-delimiters-depth-3,
+.src .org-rainbow-delimiters-depth-4,
+.src .org-rainbow-delimiters-depth-5,
+.src .org-rainbow-delimiters-depth-6,
+.src .org-rainbow-delimiters-depth-7,
+.src .org-rainbow-delimiters-depth-8,
+.src .org-rainbow-delimiters-depth-9 {
+  color: #555555; }
+
+.example .org-string, .src .org-string {
+  color: #2d9574; }
+
+.example .org-comment,
+.example .org-comment-delimiter,
+.src .org-comment,
+.src .org-comment-delimiter {
+  color: #555555; }
+
+.example .org-function-name,
+.src .org-function-name {
+  color: #6c3163; }
+
+.example .org-constant,
+.example .org-highlight-numbers-number,
+.src .org-constant,
+.src .org-highlight-numbers-number {
+  color: #4e3163; }
+
+div.side-fig {
+  max-width: 1600px;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap-reverse;
+  flex-direction: row-reverse;
+  justify-content: space-evenly;
+  position: relative;
+  padding-top: 5rem; }
+  div.side-fig h2 {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    left: 0;
+    text-align: center; }
+    @media (min-width: 850px) {
+      div.side-fig h2 {
+        width: 95%; } }
+    div.side-fig h2:target {
+      top: calc(-10px - 3rem); }
+  div.side-fig > div.outline-text-2 > figure {
+    width: min(600px, 100vw);
+    margin: 26px 0 10px 0; }
+    @media (min-width: 850px) {
+      div.side-fig > div.outline-text-2 > figure {
+        width: min(700px, 50vw); } }
+    div.side-fig > div.outline-text-2 > figure img, div.side-fig > div.outline-text-2 > figure object {
+      width: 100%;
+      margin-left: 0;
+      max-height: 500px;
+      object-fit: contain;
+      object-position: left center; }
+  div.side-fig > div.outline-text-2 .move {
+    position: absolute;
+    top: 5rem;
+    left: 0;
+    width: 100%;
+    text-align: center; }
+    @media (max-width: 1800px) {
+      div.side-fig > div.outline-text-2 .move {
+        display: none; } }
+  div.side-fig > div.outline-3 {
+    border: none;
+    background-color: transparent;
+    width: 600px;
+    max-width: 100%; }
+    div.side-fig > div.outline-3 > div.outline-4 {
+      background-color: #ebebeb;
+      border-left: 4px solid #587e72;
+      padding: 5px; }
+      div.side-fig > div.outline-3 > div.outline-4 h4 {
+        display: none; }
+
 div.banner {
   margin-left: min(calc(0px - var(--body-left) - var(--body-padding)), calc(30rem - 50vw - 0.5*var(--body-left) + 0.5*var(--body-right)));
   width: 100vw;
@@ -548,27 +500,17 @@ div.banner {
     div.banner.inline p {
       display: inline-block;
       margin: 0.2em; }
-  div.banner.green {
-    background-color: #f2f2f2; }
-    div.banner.green a {
-      color: #111;
+  div.banner.grey {
+    background-color: #f1f1f1; }
+    div.banner.grey a {
+      color: #121212;
       font-weight: bold; }
+  div.banner.faded {
+    color: #505050; }
+    div.banner.faded a {
+      color: #505050; }
   div.banner p.small {
     font-size: 0.7em; }
-
-img.inline {
-  height: 1em;
-  margin-bottom: -0.15em; }
-
-#a-quote {
-  font-style: italic;
-  opacity: 0.7; }
-
-h2[id]:target {
-  padding-top: calc(40px + 2rem); }
-
-.inline {
-  display: inline-block; }
 
 .columns {
   display: flex;
@@ -625,12 +567,26 @@ h2[id]:target {
     line-height: 0.9;
     width: 22px;
     height: 22px;
-    background: #77aaff;
-    color: #fff;
+    background: #74a5d4;
+    color: #fafafa;
     position: absolute;
     top: 0;
     right: 0;
     clip-path: polygon(0 0, 100% 100%, 100% 0); }
+
+#postamble {
+  text-align: center;
+  background: #eaeaea;
+  color: #4d4d4d;
+  font-family: var(--sans);
+  font-family: var(--sans);
+  padding: 0.4rem 0;
+  margin: 5rem calc(0px - var(--body-right) - var(--body-padding)) 0 calc(0px - var(--body-left) - var(--body-padding)); }
+  #postamble p {
+    display: inline;
+    margin-left: 1rem; }
+    #postamble p a:hover {
+      text-decoration: none; }
 
 #src {
   position: fixed;
