--- a/resources/style/org.scss
+++ b/resources/style/org.scss
@@ -1,758 +1,16 @@
-@font-face {
-    font-family: 'Droid Serif';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: local('Droid Serif Regular'), local('DroidSerif-Regular'), url(/resources/fonts/droid-serif.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-@font-face {
-    font-family: 'Droid Serif';
-    font-style: italic;
-    font-weight: 400;
-    font-display: swap;
-    src: local('Droid Serif Italic'), local('DroidSerif-Italic'), url(/resources/fonts/droid-serif-italic.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-@font-face {
-    font-family: 'Droid Sans Mono';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: local('Droid Sans Mono Regular'), local('DroidSansMono-Regular'), url(/resources/fonts/droid-sans-mono.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-// @font-face {
-//     font-family: 'Droid Sans';
-//     font-style: normal;
-//     font-weight: 400;
-//     src: local('Droid Sans Regular'), local('DroidSans-Regular'), url(/resources/fonts/droid-sans.woff2) format('woff2');
-//     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-// }
+@import 'font';
+@import 'variables';
+@import 'color-contrast';
+@import 'layout';
 
-html {
-    margin: 0;
-    font: 400 .9em/1.6em "Droid Serif", "Open Sans", Cambria, Georgia, "DejaVu Serif", serif;
-    // because otherwise 100vw triggers a horizontal scrollbar >:(
-    // this is alright because we should never have anything more than 100vw wide
-    // centered elements will now become off-centre by scrollbarwidth/2, but that
-    // seems acceptable
-    overflow-x: hidden;
-}
-
-#searchgmane {
-    margin-left: 10pt;
-}
-
-#logo {
-    position: absolute;
-    top: 12px;
-    left: 20px;
-}
-
-#buttons {
-    display:block;
-    font-size: 1.2em;
-    position:absolute;
-    top:20pt;
-    right:10pt;
-    text-align: right;
-    padding: .2em 1em;
-    background: #EEE;
-    border-radius: 10px;
-}
-
-
-button.btn, a.btn {
-    display: inline-block;
-    padding: 8px 15px;
-    border-radius: 3px;
-    margin: 5px 0px;
-    color: #fff;
-    background-color: var(--green);
-    &:hover {
-        text-decoration: none;
-        color: #fff;
-        background-color: var(--dark-green);
-    }
-}
-
-a {
-    text-decoration: none;
-    color: var(--dark-green);
-}
-a:visited {
-    text-decoration: none;
-}
-a:not(.btn):hover {
-    text-decoration: underline;
-    filter: brightness(85%);
-}
-a:not(.btn)[href^="https://orgmode.org"], a:not(.btn):not([href^="https://"]):not([href^="http://"]) {
-    &:hover {
-        text-decoration: underline dashed;
-    }
-}
-
-#content {
-    font-size: 1.2em;
-    line-height: 1.4;
-    max-width: 60rem;
-    margin: auto;
-}
-
-#content p {
-    padding-right: 7pt;
-}
-
-h1.title {
-    display: none;
-}
-
-h3 {
-    display: none;
-    font-size: 1.4em;
-}
-
-.outline-3 {
-    background-color: #eaeaea;
-    border-left: 4px solid var(--dark-green);
-    padding: 5pt;
-    width: 27em;
-    max-width: 80%;
-    font-size: 1em;
-    margin-top: 20pt;
-}
-
-.outline-3 p {
-    margin:3pt; 
-    padding:0;
-}
-
-h2 {
-    display: block;
-    padding-top: 30px;
-    font-size: 1.8em;
-    margin-top: 0;
-    margin-bottom: 30pt;
-    line-height: 1.1;
-}
-
-.outline-2 {
-    font-size: 1em;
-    margin-top: 40px;
-    width: 100%;
-}
-
-*.outline-2 img {
-    margin-left: 50px;
-    max-width: 80%;
-}
-
-.iframe {
-    float: right;
-}
-
-*.outline-2 p {
-    margin-right: 5px;
-    margin-left: 5px;
-    padding-right: 5px;
-    padding-left: 5px;
-}
-
-code,kbd {
-    font-family: "Droid Sans Mono";
-    hyphens: none;
-    word-break: break-word;
-    white-space: normal;
-    word-wrap: break-word;
-}
-
-code {
-    color: #333;
-    background-color: #e8e8e8;
-    border-radius: 4px;
-    padding: 2px 4px;
-    font-size: 85%;
-}
-kbd { // verbatim
-    background-color: #f7f7f7;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    box-shadow: 0 1px 0 rgba(0,0,0,0.2),0 0 0 2px #fff inset;
-    color: #333;
-    line-height: 1.4;
-    margin: 0 .1em;
-    padding: .1em .6em;
-    text-shadow: 0 1px 0 #fff;
-    font-size: 75%;
-}
-
-pre {
-    font-family: "Droid Sans Mono", monospace;
-    font-size: .8em;
-    font-weight: normal;
-    line-height: 1.4em;
-    background-color: #eeeeee;
-    border-left: 4px solid #aaa;
-    margin-right: 1pt;
-    padding: 0.4em 0.6em;
-}
-pre.src {
-    padding: 0.4em 0.6em; // override from `org-html-style-default'
-    overflow-x: auto;
-    position: relative;
-    &::before {
-        display: none;
-        position: absolute;
-        right: 10px;
-        padding: 3px;
-        background-color: #eeec;
-        color: #555;
-        top: 0;
-    }
-    &:hover::before {
-        display: inline;
-    }
-}
-
-pre.src-org:before { content: 'Org mode'; }
-pre.src-shell:before { content: 'Shell'; }
-
-example, .src {
-    color: #2c3e50;
-}
-.example .org-keyword, .src .org-keyword {
-    color: #3a81c3;
-}
-.example .org-variable-name, .src .org-variable-name {
-    color: #715ab1;
-}
-.example .org-rainbow-delimiters-depth-1,
-.example .org-rainbow-delimiters-depth-2,
-.example .org-rainbow-delimiters-depth-3,
-.example .org-rainbow-delimiters-depth-4,
-.example .org-rainbow-delimiters-depth-5,
-.example .org-rainbow-delimiters-depth-6,
-.example .org-rainbow-delimiters-depth-7,
-.example .org-rainbow-delimiters-depth-8,
-.example .org-rainbow-delimiters-depth-9,
-.src .org-rainbow-delimiters-depth-1,
-.src .org-rainbow-delimiters-depth-2,
-.src .org-rainbow-delimiters-depth-3,
-.src .org-rainbow-delimiters-depth-4,
-.src .org-rainbow-delimiters-depth-5,
-.src .org-rainbow-delimiters-depth-6,
-.src .org-rainbow-delimiters-depth-7,
-.src .org-rainbow-delimiters-depth-8,
-.src .org-rainbow-delimiters-depth-9 {
-    color: #555555;
-}
-.example .org-string, .src .org-string {
-    color: #2d9574;
-}
-.example .org-comment,
-.example .org-comment-delimiter,
-.src .org-comment,
-.src .org-comment-delimiter {
-    color: #555555;
-}
-.example .org-function-name,
-.src .org-function-name {
-    color: #6c3163;
-}
-.example .org-constant,
-.example .org-highlight-numbers-number,
-.src .org-constant,
-.src .org-highlight-numbers-number {
-    color: #4e3163;
-}
-
-.org-right  { margin-left: auto; margin-right: 0px;  text-align: right; }
-.org-left   { margin-left: 0px;  margin-right: auto; text-align: left; }
-.org-center { margin-left: auto; margin-right: auto; text-align: center; }
-
-table {
-    border-collapse:collapse;
-}
-caption.t-above {
-    caption-side: top; }
-caption.t-bottom {
-    caption-side: bottom; }
-td, th {
-    vertical-align:top; }
-th.org-right  {
-    text-align: center; }
-th.org-left   {
-    text-align: center; }
-th.org-center {
-    text-align: center; }
-td.org-right  {
-    text-align: right; }
-td.org-left   {
-    text-align: left; }
-td.org-center {
-    text-align: center; }
-
-dt {
-    font-weight: bold; }
-dd {
-    margin-bottom: 0.5em; }
-
-.footpara {
-    display: inline; }
-.footdef  {
-    margin-bottom: 1em; }
-
-.figure {
-    padding: 1em; }
-.figure p {
-    text-align: center; }
-
-.equation-container {
-    display: table;
-    text-align: center;
-    width: 100%;
-}
-.equation {
-    vertical-align: middle;
-}
-.equation-label {
-    display: table-cell;
-    text-align: right;
-    vertical-align: middle;
-}
-
-#orgquote {
-    z-index: 1000;
-    position: fixed;
-    margin: 0;
-    bottom: 0;
-    right: 0;
-    font-size:100%;
-    padding: 20px;
-    background-color: #eee;
-    -moz-opacity:0;
-    opacity:0;
-    filter:alpha(opacity=0);
-}
-
-#orgquote:hover {
-    -moz-opacity:1;
-    opacity:1;
-    filter:alpha(opacity=100);
-}
-
-.move {
-    
-    font-weight: 800;
-    color: var(--dark-green);
-    position: relative;
-    a {
-        color: inherit;
-        text-transform: capitalize;
-        &:hover {
-            opacity: 0.9;
-            text-decoration: none;
-        }
-    }
-}
-.outline-text-2 > .move {
-    top: -30px;
-}
-
-#postamble {
-    text-align: center;
-    background: #eaeaea;
-    color: #515151;
-    font-family: var(--sans);
-    font-family: var(--sans);
-    padding: 0.4rem 0;
-    margin: 5rem calc(0px - var(--body-right) - var(--body-padding)) 0 calc(0px - var(--body-left) - var(--body-padding));
-    p {
-        display: inline;
-        margin-left: 1rem;
-        a:hover {
-            text-decoration: none;
-        }
-    }
-}
-
-div.side-fig {
-    max-width: 1600px;
-    margin: auto;
-    display: flex;
-    flex-wrap: wrap-reverse;
-    flex-direction: row-reverse;
-    justify-content: space-evenly;
-    position: relative;
-    padding-top: 5rem;
-    h2 {
-        position: absolute;
-        top: 0;
-        width: 100%;
-        @media(min-width:850px) {
-            width: 95%; // no idea why this is needed
-        }
-        left: 0;
-        text-align: center;
-        &:target {
-            top: calc(-10px - 3rem); // to account for added padding
-        }
-    }
-    > div.outline-text-2 { // figure & move
-        > figure {
-            width: #{"min(600px, 100vw)"};
-            margin: 26px 0 10px 0;
-            @media(min-width:850px) {
-                width: #{"min(700px, 50vw)"};
-            }
-            img,object {
-                width: 100%;
-                margin-left: 0;
-                max-height: 500px;
-                object-fit: contain;
-                object-position: left center;
-            }
-        }
-        .move {
-            position: absolute;
-            top: 5rem;
-            left: 0;
-            width: 100%;
-            text-align: center;
-            @media(max-width:1800px) {
-                display: none;
-            }
-        }
-    }
-    > div.outline-3 { // description
-        border: none;
-        background-color: transparent;
-        width: 600px;
-        max-width: 100%;
-        > div.outline-4 { // more
-            background-color: #eaeaea;
-            border-left: 4px solid var(--dark-green);
-            padding: 5px;
-            h4 {
-                display: none;
-            }
-        }
-    }
-}
-
-
-:root {
-    --sans: -apple-system, BlinkMacSystemFont, San Francisco, Helvetica Neue, Helvetica, Ubuntu, Roboto, Noto, Segoe UI, Arial, sans-serif;
-    // body margins and padding
-    --body-left: 0px;
-    --body-right: 0px;
-    --body-padding: 10px;
-    --green: #77aa99;
-    --dark-green: #587e72;
-    @media(min-width:850px) and (max-width:1000px){
-        --body-left: 25px;
-        --body-right: 15px;
-    }
-    @media(min-width:1000px){
-        --body-left: 50px;
-        --body-right: 30px;
-        --body-padding: 20px;
-    }
-    @media(min-width:1600px){
-        --body-left: 80px;
-        --body-right: 50px;
-        --body-padding: 30px;
-    }
-}
-
-* {
-    box-sizing: border-box;
-}
-
-body {
-    margin: calc(2.0rem + 14px) var(--body-right) 0 var(--body-left);
-    padding: 0 var(--body-padding);
-    background-color: #fafafa;
-}
-
-nav#main {
-    background-color: var(--green);
-    padding: 8px;
-    margin-bottom: 20px;
-    display: flex;
-    justify-content: center;
-    font-size: 1.2rem;
-    font-family: var(--sans);
-    /* fix the position for now - easy solution */
-    position: fixed;
-    width: 100vw; // use over % to avoid scrollbar effect
-    top: 0;
-    left: 0;
-    z-index: 1;
-    line-height: 2em;
-    a {
-        padding: 0 10px;
-        text-decoration: none;
-        font-weight: 500;
-        color: #fff;
-        p.logo {
-            img {
-                height: 2em;
-                margin-bottom: -0.8em;
-                position: relative;
-                top: -0.2em;
-            }
-            display: inline-block;
-            font-weight: 700;
-            margin: 0;
-            color: #333;
-        }
-    }
-    #translate {
-        position: absolute;
-        left: 1em;
-        color: #5a8073;
-        font-weight: bold;
-        a {
-            color: #5a8073;
-            font-weight: bold;
-            padding: 0px;
-            margin: 0 -2px 0 -2px;
-        }
-    }
-    // .view-source {
-    //     position: absolute;
-    //     @media(min-width:850px) {
-    //         right: 1em;
-    //         transform: scale(0.7,1);
-    //         font-weight: bold;
-    //         font-family: "Droid Sans Mono", monospace;
-    //     }
-    //     align-self: center;
-    //     color: #466259;
-    //     font-weight: bold;
-    //     line-height: 1.5;
-    //     padding: 0 4px 0px 4px;
-    //     border: none;
-    //     background: #fff;
-    //     border-radius: 2px;
-    //     &:hover {
-    //         background: #eee;
-    //         color: #304840;
-    //     }
-    // }
-    label, input {
-        display: none;
-    }
-    @media(max-width:850px) {
-        flex-direction: column;
-        label {
-            display: block;
-            font-weight: 700;
-            color: #fff;
-            line-height: 1;
-            font-size: 1.6em;
-        }
-        > a:first-of-type {
-            margin-top: -1.8em;
-        }
-        > a:last-child {
-            margin-bottom: -8px;
-        }
-        p {
-            align-self: center;
-            margin-bottom: -0.4em;
-        }
-        a,#translate {
-            display: none;
-            align-self: center;
-        }
-        #translate {
-            left: 0;
-            right: 0;
-            bottom: 0;
-            margin-top: 0.35em;
-            height: 1.9em;
-            line-height: 1.7;
-            text-align: right;
-            padding-right: 1em;
-            background-color: #fff4;
-        }
-        a.view-source {
-            position: relative;
-            align-self: baseline;
-            background-color: transparent;
-            font-size: 0.9em;
-            line-height: 1;
-            margin-left: 10pt;
-            padding-bottom: 3pt;
-            top: 2px;
-            &::after {
-                content: ' view source';
-                font-weight: 400;
-            }
-        }
-        input:checked {
-            ~ a, ~ #translate {
-                display: block;
-            }
-            ~ #translate a {
-                display: inline-block;
-            }
-        }
-    }
-}
-
-div.banner {
-    margin-left: #{"min(calc(0px - var(--body-left) - var(--body-padding)), calc(30rem - 50vw - 0.5*var(--body-left) + 0.5*var(--body-right)))"};
-    width: 100vw;
-    padding: 10px 5px 10px 5px;
-    text-align: center;
-    font-size: 1.2rem;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: center;
-    #a-quote {
-        flex-basis: 100%;
-        max-width: none;
-    }
-    &.slim {
-        padding: 0.5rem 1rem;
-        font-size: 1rem;
-        font-family: var(--sans);
-    }
-    &.inline {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
-        p {
-            display: inline-block;
-            margin: 0.2em;
-        }
-    }
-    &.green {
-        background-color: #f2f2f2;
-        a {
-            color: #111;
-            font-weight: bold;
-        }
-    }
-    p.small {
-        font-size: 0.7em;
-    }
-}
-
-img.inline {
-    height: 1em;
-    margin-bottom: -0.15em;
-}
-
-
-#a-quote {
-    font-style: italic;
-    opacity: 0.7;
-}
-
-// to account for the navbar in scroll-to position
-h2[id]:target {
-    padding-top: calc(40px + 2rem); 
-}
-
-.inline {
-    display: inline-block;
-}
-
-.columns {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    max-width: none;
-    width: 100%;
-    margin-top: 0;
-    position: relative;
-    &.no-heading {
-        h2 {
-            display: none;
-        }
-    }
-    h2 {
-        position: absolute;
-        left: 0;
-        top: -1.2em;
-    }
-    .outline-3 {
-        background: none;
-        border: none;
-        text-align: center;
-        width: 18rem;
-        min-height: 10rem;
-        margin-top: 1rem;
-        a {
-            display: block;
-            text-decoration: none;
-            color: inherit;
-            a {
-                display: initial;
-            }
-        }
-        figure {
-            margin: 0
-        }
-        .org-svg, img {
-            width: auto;
-            margin-left: 0;
-            height: 9rem;
-            max-width: 80%;
-            padding-bottom: 2.5rem;
-            pointer-events: none;
-        }
-        h3 {
-            display: block;
-            position: relative;
-            top: 7rem;
-            margin-bottom: -2.5rem;
-            pointer-events: none;
-            height: 1em;
-            // allow heading to slightly exceed bounding box
-            width: 110%;
-            margin-left: -5%;
-        }
-    }
-}
-
-.starred {
-    position: relative;
-    &::before {
-        content: '🟊';
-        text-align: right;
-        padding: 0 1.5px 4px 2.5px;
-        line-height: 0.9;
-        width: 22px;
-        height: 22px;
-        background: #77aaff;
-        color: #fff;
-        position: absolute;
-        top: 0;
-        right: 0;
-        clip-path: polygon(0 0, 100% 100%, 100% 0);
-
-    }
-}
-
-// when viewieng src
-#src {
-    position: fixed;
-    left: 0;
-    top: 0;
-    border: none;
-    width: 100%;
-    height: 100%;
-    overflow-y: auto;
-    padding-top: calc(2.3rem + 16px);
-    @media(max-width:850px) {
-        padding-top: calc(1.4rem + 16px);
-    }
-}
+// Components
+@import 'org-elements';
+@import 'nav';
+@import 'links';
+@import 'code';
+@import 'side-fig';
+@import 'banner';
+@import 'columns';
+@import 'starred';
+@import 'footer';
+@import 'page-src-view';
