Shrink base font size slightly

--- a/resources/style/_font.scss
+++ b/resources/style/_font.scss
@@ -31,8 +31,7 @@
 // }
 
 html {
-    font-family: "Droid Serif", Cambria, Big Carslon, Lucida Bright, Georgia, "DejaVu Serif", serif;
-    font-weight: 400;
+    font: 400 0.9em "Droid Serif", Cambria, Big Carslon, Lucida Bright, Georgia, "DejaVu Serif", serif;
 }
 
 :root {
