--- a/resources/style/org.css
+++ b/resources/style/org.css
@@ -374,53 +374,33 @@ pre.src-org:before {
 pre.src-shell:before {
   content: 'Shell'; }
 
-example, .src {
+.example {
   color: #2c3e50; }
 
-.example .org-keyword, .src .org-keyword {
-  color: #3a81c3; }
-
-.example .org-variable-name, .src .org-variable-name {
-  color: #715ab1; }
-
-.example .org-rainbow-delimiters-depth-1,
-.example .org-rainbow-delimiters-depth-2,
-.example .org-rainbow-delimiters-depth-3,
-.example .org-rainbow-delimiters-depth-4,
-.example .org-rainbow-delimiters-depth-5,
-.example .org-rainbow-delimiters-depth-6,
-.example .org-rainbow-delimiters-depth-7,
-.example .org-rainbow-delimiters-depth-8,
-.example .org-rainbow-delimiters-depth-9,
-.src .org-rainbow-delimiters-depth-1,
-.src .org-rainbow-delimiters-depth-2,
-.src .org-rainbow-delimiters-depth-3,
-.src .org-rainbow-delimiters-depth-4,
-.src .org-rainbow-delimiters-depth-5,
-.src .org-rainbow-delimiters-depth-6,
-.src .org-rainbow-delimiters-depth-7,
-.src .org-rainbow-delimiters-depth-8,
-.src .org-rainbow-delimiters-depth-9 {
-  color: #555555; }
-
-.example .org-string, .src .org-string {
-  color: #2d9574; }
-
-.example .org-comment,
-.example .org-comment-delimiter,
-.src .org-comment,
-.src .org-comment-delimiter {
-  color: #555555; }
-
-.example .org-function-name,
-.src .org-function-name {
-  color: #6c3163; }
-
-.example .org-constant,
-.example .org-highlight-numbers-number,
-.src .org-constant,
-.src .org-highlight-numbers-number {
-  color: #4e3163; }
+.src {
+  color: #2c3e50; }
+  .src .org-keyword {
+    color: #3a81c3; }
+  .src .org-variable-name {
+    color: #715ab1; }
+  .src .org-rainbow-delimiters-depth-1,
+  .src .org-rainbow-delimiters-depth-2,
+  .src .org-rainbow-delimiters-depth-3,
+  .src .org-rainbow-delimiters-depth-4,
+  .src .org-rainbow-delimiters-depth-5,
+  .src .org-rainbow-delimiters-depth-6,
+  .src .org-rainbow-delimiters-depth-7,
+  .src .org-rainbow-delimiters-depth-8,
+  .src .org-rainbow-delimiters-depth-9 {
+    color: #555555; }
+  .src .org-string {
+    color: #2d9574; }
+  .src .org-comment, .src .org-comment-delimiter {
+    color: #555555; }
+  .src .org-function-name {
+    color: #6c3163; }
+  .src .org-constant, .src .org-highlight-numbers-number, .src .org-builtin {
+    color: #4e3163; }
 
 div.side-fig {
   max-width: 1600px;
