Fix last link in mobile nav not being unclickable

--- a/resources/style/_nav.scss
+++ b/resources/style/_nav.scss
@@ -84,6 +84,7 @@ nav#main {
         }
         > a:last-child {
             margin-bottom: -8px;
+            z-index: 0;
         }
         p {
             align-self: center;
