Make link color WCAG AA compliant

--- a/resources/style/_links.scss
+++ b/resources/style/_links.scss
@@ -14,7 +14,7 @@ button.btn, a.btn {
 
 a {
     text-decoration: none;
-    color: $secondary;
+    color: wcag-color($secondary, $background);
 }
 a:visited {
     text-decoration: none;
