--- a/resources/style/org.css
+++ b/resources/style/org.css
@@ -306,7 +306,7 @@ button.btn, a.btn {
 
 a {
   text-decoration: none;
-  color: #587e72; }
+  color: #567b70; }
 
 a:visited {
   text-decoration: none; }
